tests/default/default-fail03.stderr
default-fail03.hs:4:1: error: [GHC-99565]
    Multiple default declarations for class ‘Num’
      conflicting named default declaration at: default-fail03.hs:3:1-29

