tests/default/default-fail03.hs
{-# LANGUAGE NamedDefaults #-}

default Num (Integer, Double)
default Num (Integer, Double)
